syntax = "proto3";

package ldap_service;

import "structs/user.proto";

message GetUserRequest {
  string uid = 1;
}

message GetUserResponse {
  structs.User user = 1;
}

message AuthUserRequest {
  string uid = 1;
  string password = 2;
}

message AuthUserResponse {
  bool valid = 1;
  optional structs.User user = 2;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc Auth(AuthUserRequest) returns (AuthUserResponse);
}